
# Note: This crate must be built using do.sh

[package]
name = "decefi-solana"
version = "0.0.1"
description = "decefi; self-custody futures trading on remote liquidity"
authors = ["decefi team"]
edition = "2018"

[features]
no-entrypoint = []
skip-no-mangle = ["solana-sdk/skip-no-mangle"]
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[dependencies]
byteorder = "1.3"
serde = { version = "1.0.100", default-features = false, features = ["alloc", "derive"] }
serde_derive = "1.0"
solana-sdk = { version = "=1.3.9", default-features = false, optional = true }
num_enum = "0.5.0"
bytemuck = { version = "1.4.0" }
num-traits = "0.2.12"
arrayref = "0.3.6"
thiserror = "1.0.20"

[lib]
name = "decefi_solana"
crate-type = ["cdylib", "lib"]
